Add install directions

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
   <title>openGuild | FinchMFG</title>
 </head>
 <template name="index">
-  {{>adminHeader}}
+  {{#if currentUser}}
+    {{>adminHeader}}
+  {{/if}}
   {{>nav}}
   {{>feed}}
 
