Add twitch sorting

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
   {{/if}}
   {{#if about.about}}
   <script>
-  $('meta[name=description]').attr('content', '{{about.about}}');
+  $('meta[name=description]').attr('content', "{{about.about}}");
   </script>
   {{/if}}
   {{#if background.path}}
