Fix application bug, improve stuff

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Varela|Baloo|Open+Sans|Roboto" rel="stylesheet">
   <!-- change me! Otherwise this might show in search engines!-->
-  <title>openGuild | FinchMFG</title>
-  <meta name="description" content="openGuild-CMS | the open source WoW guild software"/>
+  <title>Blessed Ignorance</title>
+  <meta name="description" content="Blessed Ignorance is a progression raid guild for World of Warcraft on Zul'jin - Horde."/>
 </head>
 <template name="index">
   {{#if currentUser}}
@@ -13,7 +13,7 @@
   {{>nav}}
   {{>feed}}
 
-  <!-- this might not be SEO friendly -->
+  <!-- this might not be SEO friendly .. it's not, so I'm forcing it right now-->
   {{#if title.title}}
   <script>
   document.title = "{{title.title}}"
