add better SEO add ability to upload tabard

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Varela|Baloo|Open+Sans|Roboto" rel="stylesheet">
-  <!-- change me! Otherwise this might show in search engines!-->
-  <title>Blessed Ignorance</title>
-  <meta name="description" content="Blessed Ignorance is a progression raid guild for World of Warcraft on Zul'jin - Horde."/>
+  <!-- Title and Meta generated server side -->
 </head>
 <template name="index">
   {{#if currentUser}}
@@ -13,17 +11,6 @@
   {{>nav}}
   {{>feed}}
 
-  <!-- this might not be SEO friendly .. it's not, so I'm forcing it right now-->
-  {{#if title.title}}
-  <script>
-  document.title = "{{title.title}}"
-  </script>
-  {{/if}}
-  {{#if about.about}}
-  <script>
-  $('meta[name=description]').attr('content', "{{about.about}}");
-  </script>
-  {{/if}}
   {{#if background.path}}
   <script>
   document.body.style.background = "url({{background.path}})";
