Lawn keeping + admin routes + context aware admin bar

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/files/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Varela|Baloo|Open+Sans|Roboto" rel="stylesheet">
   <!-- Title and Meta generated server side -->
